fix(): Repair bug on Safari

--- a/src/_sass/components/_stage.scss
+++ b/src/_sass/components/_stage.scss
@@ -1,6 +1,7 @@
 .stage {
   display: flex;
   width: 100%;
+  min-height: 100%;
   max-width: 1230px;
   margin: 0 auto;
 
